@@ -1,4 +1,5 @@
-C:\d\jvm\graal17\bin\native-image.cmd ^
+%HOME%\.jdks\graalvm-jdk-24.36.1\bin\native-image.cmd ^
 -march=native ^
 --no-fallback ^
+--enable-native-access=ALL-UNNAMED ^
 -jar ../headless/build/libs/spotvox.jar
